--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,10 +3,10 @@ version: '3'
 dotenv: ['.env']
 
 tasks:
-  update-deps:
+  upgrade:
     desc: Update all go dependencies
     cmds:
-      - cd golang-shared-libs && go get -u
+      #- cd golang-shared-libs && go get -u */**
       - cd input-reader && go get -u
       - cd item-store && go get -u
       - cd serial-writer && go get -u
